# confluence-rag-project

./: .coverage  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.standalone  ENV_CONFIGURATION.md  ENV_TEMPLATE  EXPECTED_RESULTS.md  FINAL_TEST_REPORT.md  GITHUB_SETUP.md  LICENSE  Makefile  OPEN_WEBUI_SYSTEM_PROMPT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_RESET_INDEX.md  SEARCH_ANALYSIS.md  TECHNICAL_SPECIFICATION.md  TEST_QUERIES_README.md  TEST_RESULTS.md  analyze_rerank_scores.md  analyze_search_results.py  check_page_exists.py  coverage.xml  docker-compose.observability.yml  docker-compose.yml  fix_linting.py  fix_whitespace.py  mcp_rag_secure.py  mypy.ini  pyproject.toml  pytest.ini  remove_dead_code.py  requirements-core.txt  requirements-dev.txt  (+3 more)
.cursor/: CURSOR_MCP_SETUP.md  cursor_mcp_client.py  cursor_mcp_config.json
docs/: QUICK_FIX.md  refactoring_plan.md
observability/: README.md  prometheus.yml  tempo-config.yaml
qdrant_storage/: raft_state.json
rag_server/: __init__.py  advanced_search.py  config.py  context_expansion.py  embeddings.py  evaluate_rag.py  hallucination_detector.py  hybrid_search.py  mcp_rag_secure.py  mmr_reranker.py  observability.py  postgres_storage.py  qdrant_storage.py  query_rewriter.py  response_formatter.py  search_pipeline.py  self_query_parser.py  semantic_cache.py  semantic_query_log.py  sync_confluence.py  sync_confluence_optimized_final.py  synonyms_manager.py
scripts/: clear_database.py
tests/: README.md  TEST_REPORT.md  __init__.py  conftest.py  run_all_unit_tests.ps1  run_all_unit_tests.sh  test_adaptive_weights.py  test_all_improvements.py  test_context_expansion.py  test_coverage_extended.py  test_dimension_validation.py  test_diversity_filter_simple.py  test_embeddings.py  test_final_report.py  test_hallucination_detector.py  test_hybrid_search.py  test_integration.py  test_integration_semantic_log.py  test_intent.py  test_intent_classification.py  test_intent_config.py  test_keyword_extraction.py  test_mcp_query_final.py  test_mcp_server.py  test_metadata_extraction.py  test_mmr_reranker.py  test_nomenclature_direct.py  test_nomenclature_final.py  test_nomenclature_questions.py  test_parallel_search.py  (+24 more)
(+58 files in other folders)
