[project]
name = "confluence-rag-server"
version = "1.0.0"
description = "Production-ready RAG system for Confluence with hybrid search, context expansion, and hallucination detection"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "fastmcp>=0.2.0",
    "rank_bm25>=0.2.2",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "atlassian-python-api>=3.41.0",
    "html2text>=2020.1.16",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "urllib3>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.40b0",
    "prometheus-client>=0.17.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "sentence-transformers>=2.7.0",
    "huggingface-hub>=0.23.0,<1.0.0",
]

ml-cpu = [
    "torch>=2.0.0",
    "sentence-transformers>=2.7.0",
]

openai = [
    "openai>=1.40.0",
]

eval = [
    "ragas",
    "datasets",
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
]

# Full installation with all extras
all = [
    "confluence-rag-server[ml,openai,eval,dev]",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.venv
  | \.env
  | env
  | venv
  | __pycache__
  | \.pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=rag_server --cov-report=html --cov-report=term"
asyncio_mode = "auto"
